3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Object types refactoring: TRANSPORT, BOOK, POWER_CRYSTAL, BOOK.
    See types ChangeLog for details.
Modified files:
    include/ob_methods.h include/ob_types.h
    server/ob_methods.c server/ob_types.c
    server/apply.c server/c_object.c server/time.c
Added files:
    types/transport/transport.c types/power_crystal/power_crystal.c
    types/book/book.c types/item_transformer/item_transformer.c
    types/legacy/apply.c types/legacy/legacy_describe.c types/legacy/process.c
    types/common/describe.c
Removed files:
    server/egoitem.c
Yann Chachkoff 2007-01-14

New util: mapper.c, which generates HTML pages to browse maps.
See the file itself for information and such.
----
 Moved structures outside a .c so other programs can access it.
 include/image.h: new file, client-side image structures.
 socket/image.c: moved data to include.
----
 utils/mapper.c: new program, map browser generator.
 utils/templates/*.template: template files for mapper.
Ryo 2007-01-13

Some Win32 fixes: binmode for Perl, binary mode for opened files.
 common/porting.c
 lib/adm/collect_images.pl
 lib/collect.pl.in
 socket/item.c: variables should be declared at function start.
Ryo 2007-01-13

server/gods.c: Clean up follower_remove_given_items()
Alex Schultz 2007-01-10

Win32 compilation fixes: variables should be declared at function start.
 socket/item.c
 server/gods.c resurrection.c
Ryo 2007-01-09

New plugin: 'cflogger', which logs things to a sqlite3 database.
Warning: the database size may grow a lot, you'll have to check manually.
Logged events:
 * players join/leave/creation/quit
 * map load/unload/reset/enter/leave